--- a/blogpost.html
+++ b/blogpost.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Aqui vamos a hacer un blog post</h1>
-    <h2>aqui va otra cosa
+    <h2> este es otra muestra, pero de la cabecera 2</h2>
         
-    </h2>
+    
     <p>Y este es el parrafo de inicio</p>
 
 </body>
