Una version del hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
+    <h1>Aqui vamos a hacer un blog post 2.0</h1>
     <h2> este es otra muestra, pero de la cabecera 2</h2>
         
     
